5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1578_1326.log
== TEST (2019-03-11 19:53:59) 
-- CODE:
print("22")
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:54:04) 
-- CODE:
print("22")
-- EXECUTION TIME:
0.146454
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:54:06) 
-- CODE:
print("22")
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:54:51) 
-- CODE:
print("40+35=75")
-- OUTPUT:
40+35=75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:54:55) 
-- CODE:
print("40+35=75")
-- EXECUTION TIME:
0.180236
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
40+35=75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:55:20) 
-- CODE:
print("NÃO 22")
-- OUTPUT:
NÃO 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:55:46) 
-- CODE:
print("NÃO" 22")
-- ERROR:
File "XXXX", line 1
    print("NÃO" 22")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:55:57) 
-- CODE:
print("NÃO" "22")
-- OUTPUT:
NÃO22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:57:49) 
-- CODE:
print(22"não")
-- EXECUTION TIME:
0.124573
-- ERROR:
  File "/home/codebench/codes/1578/1326/main.py", line 1
    print(22"n\xe3o")
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:57:52) 
-- CODE:
print(22"não")
-- ERROR:
File "XXXX", line 1
    print(22"não")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:57:57) 
-- CODE:
print(22"não")
-- ERROR:
File "XXXX", line 1
    print(22"não")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:58:18) 
-- CODE:
print(22"NÃO")
-- ERROR:
File "XXXX", line 1
    print(22"NÃO")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:59:17) 
-- CODE:
print(40+35)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:59:22) 
-- CODE:
print(40+35)
-- EXECUTION TIME:
0.127755
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
